# SatisPlanning-game

./: .gitignore  Ejecucion.bat  Ejecutar_Linux_Mac.sh  Ejecutar_windows.bat  NORMAS_NOMBRAMIENTO.md  README.md  git.md  pyproject.toml  pyproyect.toml  requerimiento.txt  run.bat  run.sh
.github/workflows/: ci.yml
INSTALL/: INSTALL.md  INSTALL_LINUX_MAC.sh  INSTALL_WINDOWS.bat
doc/: clase.puml  componente.puml  mejoras.md  secuencia.puml
doc/Clases/: clase.puml  clase_menu.puml
doc/Componentes/: componente.puml  componente_componentes.puml  componente_infra.puml  componente_menu.puml
doc/Secuencia/: secuencia.puml  secuencia_juego.puml
src/: .gitignore  Game.py  Graphics.py  Objeto.py  World.py  camara.py  constantes.py  inventario.py  main.py  mapa.py  personaje.py  suelo.py
src/SatisPlanning/: Game.py  Graphics.py  Objeto.py  World.py  __init__.py  __main__.py  camara.py  componente.py  componente_agregar_objeto.py  componente_animacion.py  componente_disparo.py  componente_inventario.py  componente_mover.py  constantes.py  display_vidas.py  fabrica_juego.py  generador_monstruos.py  gestor_presentadores.py  interfaz_grafica.py  inventario.py  juego.py  manejador_chunks.py  manejador_niveles.py  mapa.py  menu.py  mundo.py  objeto.py  patron_observer.py  personaje.py  (+9 more)
tests/: test_componente_inventario.py  test_componente_mover.py  test_comportamiento_movimiento.py  test_enemigo.py  test_manejador_niveles.py  test_mundo.py  test_objeto.py  test_personaje.py  test_personaje_jugador.py  test_presentador_juego.py  test_presentador_menu.py  test_zombie.py
(+24 files in other folders)
